[package]
name = "simple_proxy"
version = "0.1.0"
authors = ["Kevin Yang <kevin.yang.xgz@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/kobe4cn/simple_proxy"
homepage = "https://github.com/kobe4cn/simple_proxy"
description = """
A simple proxy server.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
async-trait = "0.1.85"
pingora = { version = "0.5.0", features = ["lb", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.97"
http = "1.3.1"
reqwest = "0.12.11"
once_cell = "1.21.3"


[dev-dependencies]
axum = { version = "0.8", features = ["http2"] }
dashmap = "6.1.0"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
